[project]
name = "weather_data_repository"
version = "1.0.1"
description = "The database repository used for interacting with my home weather database."
dependencies = [
	"pandas",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"